# udpipe_flutter

./: .gitignore  .gitmodules  .last_build_id  .pubignore  CHANGELOG.md  LICENSE  Makefile  README.md  build_wasm.ps1  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  udpipe_init.js  version.json
.github/workflows/: build.yml
android/app/: build.gradle.kts
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
assets/models/: README.md
example/: example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/konyshev/udpipe_flutter/: MainActivity.kt
example/ios/Runner/: Info.plist
example/lib/screens/: home_screen.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/web/: index.html  udpipe_ffi.wasm
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  udpipe_flutter.dart
lib/screens/: home_screen.dart
lib/udpipe/: udpipe_flutter.dart
lib/udpipe/src/: conllu_parser.dart  udpipe_bindings.dart  udpipe_service.dart  udpipe_service_native.dart  udpipe_service_web.dart  udpipe_types.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  build_web.sh  udpipe_ffi.cpp
test/: widget_test.dart
web/: manifest.json  udpipe_ffi.js  udpipe_init.js
windows/: CMakeLists.txt
windows/runner/: main.cpp
